# scribus-gsoc11tables

Scribus/: CMakeLists.txt
Scribus/devel-doc/: Doxyfile  Makefile
Scribus/devel-doc/templates/: scribus.css
Scribus/scribus/: CMakeLists.txt  actionmanager.cpp  canvas.cpp  canvas.h  canvasgesture_cellselect.cpp  canvasgesture_cellselect.h  canvasgesture_columnresize.cpp  canvasgesture_columnresize.h  canvasgesture_rowresize.cpp  canvasgesture_rowresize.h  canvasgesture_rulermove.h  canvasgesture_table.cpp  canvasgesture_table.h  canvasgesture_tableresize.cpp  canvasgesture_tableresize.h  canvasmode.cpp  canvasmode.h  canvasmode_create.cpp  canvasmode_create.h  canvasmode_drawbezier.h  canvasmode_edit.cpp  canvasmode_editgradient.h  canvasmode_editmeshgradient.h  canvasmode_editpolygon.h  canvasmode_editspiral.h  canvasmode_edittable.cpp  canvasmode_edittable.h  canvasmode_normal.cpp  cellarea.cpp  cellarea.h  collapsedbordercollector.cpp  collapsedbordercollector.h  collapsedtablepainter.cpp  collapsedtablepainter.h  commonstrings.cpp  pageitem.cpp  pageitem.h  pageitem_table.cpp  pageitem_table.h  pageitem_textframe.cpp  (+19 more)
Scribus/scribus/styles/: cellstyle.attrdefs.cxx  cellstyle.cpp  cellstyle.h  overview.txt  styleset.h  tablestyle.attrdefs.cxx  tablestyle.cpp  tablestyle.h
Scribus/scribus/tests/: CMakeLists.txt  cellareatests.cpp  cellareatests.h  testIndex.h  testStoryText.cpp
Scribus/scribus/tests/scripts/: test_table_border_joins.py  test_tables.py
Scribus/scribus/ui/: contextmenu.cpp  inserttablerowsdialog.cpp  inserttablerowsdialog.h  modetoolbar.cpp  (+17 more)
(+16 files in other folders)
