INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(TESTS_LIBRARIES ${QT_QTTEST_LIBRARY} ${QT_LIBRARIES})

# Unit tests for CellArea
SET(CELLAREATESTS_CLASSES cellareatests.h)
SET(CELLAREATESTS_SOURCES cellareatests.cpp ../cellarea.cpp)
QT4_WRAP_CPP(CELLAREATESTS_SOURCES ${CELLAREATESTS_CLASSES})
ADD_EXECUTABLE(cellareatests ${CELLAREATESTS_SOURCES})
TARGET_LINK_LIBRARIES(cellareatests ${TESTS_LIBRARIES})
ADD_TEST(NAME cellareatests COMMAND cellareatests)
